Add reorder columns feature to server
